bug hopefully fixed now